--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT =3400
+SECRET = ihwdsklfbsjvklwdfbvnlvkbsjclasjvnnkl
 DB_url="host=localhost user=divyanshtiwari password=notespass dbname=notesdb port=5432 sslmode=disable"
 
 
