--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-PORT =3500
-SECRET = ihwdsklfbsjvklwdfbvnlvkbsjclasjvnnklsdkjfsdlfkfvssfddsdf
-DB_url="host=localhost user=divyanshtiwari password=notespass dbname=notesdb port=5432 sslmode=disable"
-
+PORT=3500
+SECRET=ihwdsklfbsjvklwdfbvnlvkbsjclasjvnnklsdkjfsdlfkfvssfddsdf
+DB_url=host=db user=divyanshtiwari password=notespass dbname=notesdb port=5432 sslmode=disable
+POSTGRES_USER=divyanshtiwari
+POSTGRES_PASSWORD=notespass
+POSTGRES_DB=notesdb
 
